[package]
name = "how-to-ecs"
version = "0.1.0"
authors = ["Sebastian Richter <sebastian.richter@paessler.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.15"
specs-derive = "0.4"

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["image"]
